@@ -1,3 +1,13 @@
+2004-04-24  Mason Kidd  <mrkidd@mrkidd.com>
+
+	* gamp.glade, src/main.c, src/main.h, src/gui-callbacks.c: Add a time elapsed display
+	
+2004-04-24  Mason Kidd  <mrkidd@mrkidd.com>
+
+	* src/GAPPlayer.c, src/GAPPlayer.h: Add a tick callback
+	* src/main.c, src/main.h: Enable the tick callback from the GAPPlayer object
+	* src/gui-callbacks.c: Simplify the code for the slider, may need functionality added
+	
 2004-04-15  Mason Kidd  <mrkidd@mrkidd.com>
 
 	* src/GAPPlayer.c,.h: Add duration property and get function
